--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = "1.12.0"
+async-trait = "0.1.80"
+anyhow = { version = "1.0.82", features = ["backtrace"] }
+tokio = { version = "1.37.0", features = ["full"] }
+
+[dev-dependencies]
+mockall = "0.13.0"
