--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,26 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ulid = "1.1.2"
+dotenv = "0.15.0"
+derive-new = "0.6.0"
+serde_json = "1.0.115"
 async-std = "1.12.0"
 async-trait = "0.1.80"
+http = "1.1.0"
 anyhow = { version = "1.0.82", features = ["backtrace"] }
 tokio = { version = "1.37.0", features = ["full"] }
+axum = { version = "0.7.4",  features = ["multipart"] }
+axum-macros = "0.4.1"
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+sqlx = { version = "0.8.0", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }
+aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = "1.40.0"
+#aws-sdk-dynamodb = { version = "1.40.0", features = ["behavior-version-latest"] }
+serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
+async-graphql= { version = "7.0.7", features = ["chrono"] }
+async-graphql-axum = "7.0.7"
 
 [dev-dependencies]
 mockall = "0.13.0"
